syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";


// Service to communicate with mpd
service TMpdService {
    // Connect to mpd instance
    rpc Connect(ConnectionCredentials) returns (ConnectionDetails);
    // Update music DB
    rpc UpdateDB(google.protobuf.Empty) returns (google.protobuf.Empty);
    // PlayPause music 
    rpc PlaySong(Playlist) returns (google.protobuf.Empty);
    // Get songs in playlist
    rpc GetPlaylist(MetaPlaylist) returns (Playlist);
}

message Playlist {
    MetaPlaylist meta = 1;
    repeated Song songs = 2;
}

message MetaPlaylist {
    string uuid = 1;
    string name = 2;
    SongField sort_by = 3;
    SortOrder sort_order = 4;
    SongField group_by = 5;
    int32 song_pos = 6;
}

// Credentials to connect to mpd
message ConnectionCredentials {
    // Socket where mpd is located
    // Send empty string to use native mpd server
    string socket = 1;
    // Password for mpd connection
    // Omit if no password needed
    string password = 2;
}

// Result of mpd connection
message ConnectionDetails {
    ConnectionStatus status = 1;
}

// Status of mpd connection
enum ConnectionStatus {
    Connected = 0;
    FailedToConnect = 1;
    NoMpdBinary = 2;
}

enum SortOrder {
    Ascending = 0;
    Descending = 1;
}

enum SongField {
    id = 0;
    file = 1;
    time = 2;
    duration = 3;
    lastmodified = 4;
    format = 5;
    artist = 6;
    albumartist = 7;
    title = 8;
    album = 9;
    track = 10;
    date = 11;
    genre = 12;
    composer = 13;
    disc = 14;
    directory = 15;
}

message Song {
    int64 id = 1;
    string directory = 2;
    string file = 3;
    int64 time = 4;
    float duration = 5;
    google.protobuf.Timestamp lastmodified = 6;
    string format = 7;
    string artist = 8;
    string albumartist = 9;
    string title = 10;
    string album = 11;
    int64 track = 12;
    string date = 13;
    string genre = 14;
    string composer = 15;
    int64 disc = 16;
}
